feat: add .env variables

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Enviroment variables
+.env
+
 # OS
 .DS_Store
 
@@ -28,8 +31,4 @@ lerna-debug.log*
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
