--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,9 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=mysecretpassword
-POSTGRES_DATABASE=my_database
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=pass
+POSTGRES_DATABASE=postgres
 POSTGRES_SYNCHRONIZE=true
-MODE=DEV
-RUN_MIGRATIONS=true
