--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-POSTGRES_HOST=postgres
+POSTGRES_HOST=postgres-db
 POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=pass
-POSTGRES_DATABASE=postgres
+POSTGRES_DB=postgres-db
 POSTGRES_SYNCHRONIZE=true
