--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "docker:scan": "docker scout cves tomza23/home-library:v1",
+    "migration:create": "typeorm migration:create ./src/migrations/%npm_config_name%",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/config/typeOrm.config.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/config/typeOrm.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --config ./test/jest-e2e.json --noStackTrace --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --config ./test/jest-e2e.json --noStackTrace --runInBand",
