--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=4000
+LOCAL_HOST=localhost
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
@@ -12,3 +13,5 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=postgres-db
 POSTGRES_SYNCHRONIZE=true
+
+ADMINER_PORT=8080
