feat: add npm script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "docker:scan": "docker scout cves tomza23/home-library:v1",
+    "docker:scan-api": "docker scout cves tomza23/home-library:v1",
+    "docker:scan-db": "docker scout cves tomza23/home-library-db:v1",
     "migration:create": "typeorm migration:create ./src/migrations/%npm_config_name%",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/config/typeOrm.config.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/config/typeOrm.config.ts",
